--- a/Soln3/css/styles.css
+++ b/Soln3/css/styles.css
@@ -1,4 +1,23 @@
+body {
+	background-color: #ffe0b3;
+}
 
+#header-nav {
+	background-color: #ff99cc;
+	border-radius: 0;
+	border: 0;
+}
+
+.navbar-header button.navbar-toggle, .navbar-header .icon-bar {
+	border: 1px solid #cc0099;
+}
+
+/*.navbar-header button.navbar-toggle:hover, button.navbar-toggle:focus {
+	background-color: #ffcce6;
+}*/
+.navbar-header button.navbar-toggle {
+	background-color: #ffcce6;
+}
 #dropper
  {
 	background-color: red;
@@ -6,7 +25,7 @@
 
 #filler {
 	height: 1000px;
-	background-color: blue;
+	background-color: #ffff99;
 }
 
 h1 {
